hphp/hack/test/typecheck/attributes/file_attributes_missing.php.exp
File "file_attributes_missing.php", line 3, characters 9-17:
Unrecognized user attribute: __Missing starts with __ but is not a standard attribute (Naming[2049])
