hphp/hack/test/typecheck/attributes/file_attributes_missing.php
<?hh // strict

<<file: __Missing>>

class ExampleClass { }
